Add loading screen

--- a/src/i18n/locales/ar.json
+++ b/src/i18n/locales/ar.json
@@ -113,6 +113,7 @@
     "filter": "تصفية",
     "reset": "إعادة تعيين",
     "loading": "جاري التحميل...",
+    "loadingMessage": "نقوم بتجهيز خشبة المسرح للعرض التالي...",
     "error": "حدث خطأ",
     "noResults": "لا توجد نتائج",
     "viewDetails": "عرض التفاصيل",
