update url to for shows and coming soon

--- a/src/i18n/locales/ar.json
+++ b/src/i18n/locales/ar.json
@@ -102,7 +102,7 @@
   "about": {
     "title": "عن المهرجان",
     "whatIsTitle": "ما هو المهرجان العربي؟",
-    "whatIsText": "المهرجان العربي للمسرح هو حدث سنوي يستضيفه المعهد العالي للفنون المسرحية في القاهرة، يجمع عروضاً مسرحية من مختلف الدول العربية ويوفر منصة للحوار النقدي والتبادل الثقافي بين المسرحيين العرب.",
+    "whatIsText": "المهرجان العربي للمسرح هو حدث سنوي يستضيفه المعهد العالي للفنون المسرحية في القاهرة.",
     "whyArchiveTitle": "لماذا هذا الأرشيف؟",
     "whyArchiveText": "يهدف هذا الموقع إلى توثيق تاريخ المهرجان بشكل شامل، وحفظ النقد المسرحي المصاحب للعروض، وتوفير مرجع بحثي للباحثين والمهتمين بالمسرح العربي المعاصر.",
     "contactTitle": "تواصل معنا",
@@ -118,6 +118,10 @@
     "noResults": "لا توجد نتائج",
     "viewDetails": "عرض التفاصيل",
     "backToList": "العودة إلى القائمة",
-    "share": "مشاركة"
+    "share": "مشاركة",
+    "comingSoon": "قريباً",
+    "comingSoonMessage": "نضع اللمسات الأخيرة على هذه التجربة المميزة. ترقبوا!",
+    "stayTuned": "تابعونا",
+    "backHome": "العودة إلى الرئيسية"
   }
 }
