add reservation part

--- a/src/i18n/locales/ar.json
+++ b/src/i18n/locales/ar.json
@@ -128,6 +128,26 @@
     "comingSoon": "قريباً",
     "comingSoonMessage": "نضع اللمسات الأخيرة على هذه التجربة المميزة. ترقبوا!",
     "stayTuned": "تابعونا",
-    "backHome": "العودة إلى الرئيسية"
+    "backHome": "العودة إلى الرئيسية",
+    "cancel": "إلغاء"
+  },
+  "reservation": {
+    "label": "بيانات الحجز",
+    "subtitle": "أكمل البيانات التالية لتأكيد حجزك",
+    "button": "احجز مقعدك",
+    "fields": {
+      "fullName": "الاسم الكامل",
+      "email": "البريد الإلكتروني",
+      "mobile": "رقم الهاتف"
+    },
+    "submit": "تأكيد الحجز",
+    "submitting": "جاري الإرسال...",
+    "success": "تم إرسال الحجز بنجاح!",
+    "errors": {
+      "fullName": "يرجى إدخال اسمك الكامل.",
+      "email": "يرجى إدخال بريد إلكتروني صالح.",
+      "mobile": "يرجى إدخال رقم الهاتف.",
+      "generic": "تعذر إتمام الحجز. حاول مرة أخرى."
+    }
   }
 }
