--- a/src/i18n/locales/ar.json
+++ b/src/i18n/locales/ar.json
@@ -34,6 +34,8 @@
     "todayShow": "عرض اليوم"
   },
   "show": {
+    "reserve_waiting_list": "حجز في قائمة الانتظار",
+    "complete": "اكتمل الحجز",
     "bookTicket": "احجز تذكرتك",
     "director": "المخرج",
     "for_director": "للمخرج",
