Handle failed responses

--- a/src/i18n/locales/ar.json
+++ b/src/i18n/locales/ar.json
@@ -187,7 +187,13 @@
       "fullNameMaxLength": "يجب ألا يتجاوز الاسم ١٠٠ حرف.",
       "emailRequired": "يرجى إدخال بريدك الإلكتروني.",
       "email": "يرجى إدخال بريد إلكتروني صالح.",
-      "generic": "تعذر إتمام الحجز. حاول مرة أخرى."
+      "generic": "تعذر إتمام الحجز. حاول مرة أخرى.",
+      "codes": {
+        "NO_SHOW": "لم يتم العثور على هذا العرض، يرجى التحديث والمحاولة مرة أخرى.",
+        "NO_SEATS": "جميع مقاعد هذا العرض محجوزة.",
+        "DUPLICATE_MAIL": "تم تسجيل حجز سابق لهذا البريد الإلكتروني.",
+        "UNKNOWN_ERROR": "خطأ في الاتصال بالإنترنت"
+      }
     }
   }
 }
