Handle Articles response

--- a/src/i18n/locales/ar.json
+++ b/src/i18n/locales/ar.json
@@ -99,6 +99,7 @@
     },
     "author": "الكاتب",
     "relatedShow": "العرض المرتبط",
+    "relatedFestival": "المهرجان المرتبط",
     "relatedArticles": "مقالات مرتبطة",
     "readMore": "اقرأ المزيد"
   },
