--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -98,6 +98,7 @@
     },
     "author": "Author",
     "relatedShow": "Related Show",
+    "relatedFestival": "Related Festival",
     "relatedArticles": "Related Articles",
     "readMore": "Read More"
   },
