Add creativity part

--- a/src/i18n/locales/ar.json
+++ b/src/i18n/locales/ar.json
@@ -148,7 +148,18 @@
       "cancel": "إلغاء",
       "success": "شكراً لمشاركتك! سيتم مراجعة نصك قريباً."
     },
-    "by": "بقلم"
+    "by": "بقلم",
+    "types": {
+      "story": "قصة قصيرة",
+      "essay": "مقال نقدي",
+      "poem": "قصيدة",
+      "other": "أخرى"
+    },
+    "author": "الكاتب",
+    "relatedShow": "العرض المرتبط",
+    "relatedFestival": "المهرجان المرتبط",
+    "relatedArticles": "إبداعات مرتبطة",
+    "readMore": "اقرأ المزيد"
   },
   "about": {
     "title": "عن المهرجان",
