Add comments section

--- a/src/i18n/locales/ar.json
+++ b/src/i18n/locales/ar.json
@@ -81,6 +81,16 @@
       "crew": "فريق العمل",
       "additional": "معلومات إضافية",
       "synopsis": "نبذة عن العرض"
+    },
+    "comments": {
+      "title": "التعليقات",
+      "placeholder": "اكتب تعليقك هنا...",
+      "submit": "إرسال",
+      "submitting": "جاري الإرسال...",
+      "success": "تم إرسال تعليقك للمراجعة",
+      "errorSubmitting": "فشل إرسال التعليق. حاول مرة أخرى.",
+      "errorLoading": "فشل تحميل التعليقات. حاول مرة أخرى لاحقاً.",
+      "noComments": "لا توجد تعليقات بعد. كن أول من يعلق!"
     }
   },
   "articles": {
