--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -37,7 +37,7 @@
     "organizer": "Organizer",
     "startDate": "Start Date",
     "endDate": "End Date",
-    "organizingTeam": "Organizing Team",
+    "organizingTeam": "Festival Hierarchy",
     "juryList": "Jury List",
     "awards": "Awards",
     "additionalInfo": "Additional Information",
