use absolute path

--- a/src/i18n/locales/ar.json
+++ b/src/i18n/locales/ar.json
@@ -202,6 +202,7 @@
     "noResults": "لا توجد نتائج",
     "viewDetails": "عرض التفاصيل",
     "backToList": "العودة إلى القائمة",
+    "back": "رجوع",
     "share": "مشاركة",
     "comingSoon": "قريباً",
     "comingSoonMessage": "نضع اللمسات الأخيرة على هذه التجربة المميزة. ترقبوا!",
