--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -201,6 +201,7 @@
     "noResults": "No results found",
     "viewDetails": "View Details",
     "backToList": "Back to List",
+    "back": "Back",
     "share": "Share",
     "comingSoon": "Coming Soon",
     "comingSoonMessage": "We are putting the final touches on this experience. Stay tuned!",
