add share button

--- a/src/i18n/locales/ar.json
+++ b/src/i18n/locales/ar.json
@@ -8,7 +8,7 @@
   },
   "home": {
     "title": "المهرجان العربي",
-    "subtitle": "المعهد العالي للفنون المسرحية - القاهرة",
+    "subtitle": "المعهد العالي للفنون المسرحية",
     "tagline": "أرشيف نقدي وتوثيقي شامل للمهرجان العربي عبر السنوات",
     "currentEdition": "اذهب إلى دورة هذا العام",
     "browseArticles": "تصفح المقالات",
@@ -186,7 +186,7 @@
   "about": {
     "title": "عن المهرجان",
     "whatIsTitle": "ما هو المهرجان العربي؟",
-    "whatIsText": "المهرجان العربي للمسرح هو حدث سنوي يستضيفه المعهد العالي للفنون المسرحية في القاهرة.",
+    "whatIsText": "المهرجان العربي للمسرح هو حدث سنوي يستضيفه المعهد العالي للفنون المسرحية.",
     "whyArchiveTitle": "لماذا هذا الأرشيف؟",
     "whyArchiveText": "يهدف هذا الموقع إلى توثيق تاريخ المهرجان بشكل شامل، وحفظ النقد المسرحي المصاحب للعروض، وتوفير مرجع بحثي للباحثين والمهتمين بالمسرح العربي المعاصر.",
     "contactTitle": "تواصل معنا",
