--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -8,7 +8,7 @@
   },
   "home": {
     "title": "Arab Festival",
-    "subtitle": "Higher Institute of Theatrical Arts - Cairo",
+    "subtitle": "Higher Institute of Theatrical Arts",
     "tagline": "A comprehensive critical and documentary archive of the Arab Festival through the years",
     "currentEdition": "Go to Current Edition",
     "browseArticles": "Browse Critical Articles",
@@ -185,7 +185,7 @@
   "about": {
     "title": "About the Festival",
     "whatIsTitle": "What is the Arab Festival?",
-    "whatIsText": "The Arab Theatre Festival is an annual event hosted by the Higher Institute of Theatrical Arts in Cairo.",
+    "whatIsText": "The Arab Theatre Festival is an annual event hosted by the Higher Institute of Theatrical Arts.",
     "whyArchiveTitle": "Why This Archive?",
     "whyArchiveText": "This website aims to comprehensively document the festival's history, preserve the theatrical criticism accompanying the performances, and provide a research reference for scholars and those interested in contemporary Arab theatre.",
     "contactTitle": "Contact Us",
